--- a/assets/css/sylesheet.css
+++ b/assets/css/sylesheet.css
@@ -2,9 +2,27 @@
 body {
     display: flex;
     min-height: 100vh;
-    flex-direction: collumn;
+    flex-direction: column;
 }
 
 main {
     flex: 1 0 auto;
 }
+
+#banner {  
+    background-image: url("../images/banner.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 50%;
+  }
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
